Commented out tasks not implemented yet.

--- a/.github/workflows/minitorch.yml
+++ b/.github/workflows/minitorch.yml
@@ -37,19 +37,19 @@ jobs:
         pytest tests -x -m task1_1
         pytest tests -x -m task1_2
         pytest tests -x -m task1_3
-        pytest tests -x -m task1_4
-        echo "Module 2"
-        pytest tests -x -m task2_1
-        pytest tests -x -m task2_2
-        pytest tests -x -m task2_3
-        pytest tests -x -m task2_4
-        echo "Module 3"
-        pytest tests -x -m task3_1
-        pytest tests -x -m task3_2
-        pytest tests -x -m task3_3
-        pytest tests -x -m task3_4
-        echo "Module 4"
-        pytest tests -x -m task4_1
-        pytest tests -x -m task4_2
-        pytest tests -x -m task4_3
-        pytest tests -x -m task4_4
+        # pytest tests -x -m task1_4
+        # echo "Module 2"
+        # pytest tests -x -m task2_1
+        # pytest tests -x -m task2_2
+        # pytest tests -x -m task2_3
+        # pytest tests -x -m task2_4
+        # echo "Module 3"
+        # pytest tests -x -m task3_1
+        # pytest tests -x -m task3_2
+        # pytest tests -x -m task3_3
+        # pytest tests -x -m task3_4
+        # echo "Module 4"
+        # pytest tests -x -m task4_1
+        # pytest tests -x -m task4_2
+        # pytest tests -x -m task4_3
+        # pytest tests -x -m task4_4
