--- a/.github/workflows/minitorch.yml
+++ b/.github/workflows/minitorch.yml
@@ -37,7 +37,7 @@ jobs:
         pytest tests -x -m task1_1
         pytest tests -x -m task1_2
         pytest tests -x -m task1_3
-        # pytest tests -x -m task1_4
+        pytest tests -x -m task1_4
         # echo "Module 2"
         # pytest tests -x -m task2_1
         # pytest tests -x -m task2_2
